src/libbuzzy/distro/homebrew.c

#line 1 "libbuzzy/distro/homebrew.c.rl"
/* -*- coding: utf-8 -*-
 * ----------------------------------------------------------------------
 * Copyright © 2013, RedJack, LLC.
 * All rights reserved.
 *
 * Please see the COPYING file in this distribution for license details.
 * ----------------------------------------------------------------------
 */

#include <errno.h>
#include <unistd.h>
#include <sys/stat.h>
#include <sys/types.h>

#include <libcork/core.h>
#include <libcork/ds.h>
#include <libcork/os.h>
#include <libcork/helpers/errors.h>

#include "buzzy/error.h"
#include "buzzy/native.h"
#include "buzzy/os.h"
#include "buzzy/package.h"
#include "buzzy/version.h"
#include "buzzy/distro/homebrew.h"


/*-----------------------------------------------------------------------
 * Platform detection
 */

int
bz_homebrew_is_present(bool *dest)
{
    int  rc;
    struct stat  info;
    rc = stat("/usr/local/bin/brew", &info);
    if (rc == 0) {
        *dest = true;
        return 0;
    } else if (errno == ENOENT) {
        *dest = false;
        return 0;
    } else {
        cork_system_error_set();
        return -1;
    }
}


/*-----------------------------------------------------------------------
 * Native package database
 */

struct bz_version *
bz_homebrew_native_version_available(const char *native_package_name)
{
    int  cs;
    char  *p;
    char  *pe;
    char  *eof;
    char  *start;
    char  *end;
    bool  successful;
    struct cork_buffer  out = CORK_BUFFER_INIT();
    struct bz_version  *result;

    assert(native_package_name != NULL);

    rpi_check(bz_subprocess_get_output
              (&out, NULL, &successful,
               "brew", "info", native_package_name, NULL));
    if (!successful) {
        cork_buffer_done(&out);
        return NULL;
    }

    p = out.buf;
    pe = out.buf + out.size;
    eof = pe;

    
#line 86 "libbuzzy/distro/homebrew.c"
static const int homebrew_version_available_start = 1;

static const int homebrew_version_available_en_main = 1;


#line 92 "libbuzzy/distro/homebrew.c"
	{
	cs = homebrew_version_available_start;
	}

#line 97 "libbuzzy/distro/homebrew.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 45: goto st2;
		case 95: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st2;
	} else
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 45: goto st2;
		case 58: goto st3;
		case 95: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st2;
	} else
		goto st2;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 32 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 115 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 116 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 97 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 98 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 108 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 101 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 32 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto tr11;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr11;
		} else if ( (*p) >= 65 )
			goto tr11;
	} else
		goto tr11;
	goto st0;
tr11:
#line 88 "libbuzzy/distro/homebrew.c.rl"
	{ start = p; }
	goto st12;
tr13:
#line 88 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 222 "libbuzzy/distro/homebrew.c"
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto tr13;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr13;
		} else if ( (*p) >= 65 )
			goto tr13;
	} else
		goto tr13;
	goto tr12;
tr12:
#line 88 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 243 "libbuzzy/distro/homebrew.c"
	goto st13;
	}
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof8: cs = 8; goto _test_eof; 
	_test_eof9: cs = 9; goto _test_eof; 
	_test_eof10: cs = 10; goto _test_eof; 
	_test_eof11: cs = 11; goto _test_eof; 
	_test_eof12: cs = 12; goto _test_eof; 
	_test_eof13: cs = 13; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 12: 
#line 88 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	break;
#line 267 "libbuzzy/distro/homebrew.c"
	}
	}

	_out: {}
	}

#line 94 "libbuzzy/distro/homebrew.c.rl"


    /* A hack to suppress some unused variable warnings */
    (void) homebrew_version_available_en_main;

    if (CORK_UNLIKELY(cs < 
#line 281 "libbuzzy/distro/homebrew.c"
12
#line 99 "libbuzzy/distro/homebrew.c.rl"
)) {
        bz_invalid_version
            ("Unexpected output from brew for package %s", native_package_name);
        cork_buffer_done(&out);
        return NULL;
    }

    *end = '\0';
    result = bz_version_from_string(start);
    cork_buffer_done(&out);
    return result;
}

struct bz_version *
bz_homebrew_native_version_installed(const char *native_package_name)
{
    int  cs;
    char  *p;
    char  *pe;
    char  *start;
    char  *end;
    bool  installed = false;
    bool  successful;
    struct cork_buffer  out = CORK_BUFFER_INIT();
    struct bz_version  *result;

    assert(native_package_name != NULL);

    rpi_check(bz_subprocess_get_output
              (&out, NULL, &successful,
               "brew", "info", native_package_name, NULL));
    if (!successful) {
        cork_buffer_done(&out);
        return NULL;
    }

    p = out.buf;
    pe = out.buf + out.size;

    
#line 324 "libbuzzy/distro/homebrew.c"
static const int homebrew_version_installed_start = 1;

static const int homebrew_version_installed_en_main = 1;


#line 330 "libbuzzy/distro/homebrew.c"
	{
	cs = homebrew_version_installed_start;
	}

#line 335 "libbuzzy/distro/homebrew.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 45: goto st2;
		case 95: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st2;
	} else
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 45: goto st2;
		case 58: goto st3;
		case 95: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st2;
	} else
		goto st2;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 32 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 115 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 116 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 97 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 98 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 108 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 101 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 32 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st12;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st12;
		} else if ( (*p) >= 65 )
			goto st12;
	} else
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 10 )
		goto st13;
	goto st12;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
	}
	goto st13;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	switch( (*p) ) {
		case 47: goto st14;
		case 67: goto st15;
		case 78: goto st16;
	}
	goto st13;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 101: goto st29;
	}
	goto st13;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 111: goto st17;
	}
	goto st13;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 116: goto st18;
	}
	goto st13;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 32: goto st19;
		case 47: goto st14;
		case 78: goto st16;
	}
	goto st13;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 105: goto st20;
	}
	goto st13;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 110: goto st21;
	}
	goto st13;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 115: goto st22;
	}
	goto st13;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 116: goto st23;
	}
	goto st13;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 97: goto st24;
	}
	goto st13;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 108: goto st25;
	}
	goto st13;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 108: goto st26;
	}
	goto st13;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 101: goto st27;
	}
	goto st13;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 47: goto st14;
		case 78: goto st16;
		case 100: goto st28;
	}
	goto st13;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 10: goto tr29;
		case 47: goto st14;
		case 78: goto st16;
	}
	goto st13;
tr29:
#line 148 "libbuzzy/distro/homebrew.c.rl"
	{ installed = false; }
	goto st129;
tr52:
#line 147 "libbuzzy/distro/homebrew.c.rl"
	{ installed = true; }
	goto st129;
tr69:
#line 147 "libbuzzy/distro/homebrew.c.rl"
	{ installed = true; }
#line 148 "libbuzzy/distro/homebrew.c.rl"
	{ installed = false; }
	goto st129;
st129:
	if ( ++p == pe )
		goto _test_eof129;
case 129:
#line 632 "libbuzzy/distro/homebrew.c"
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
	}
	goto st129;
st130:
	if ( ++p == pe )
		goto _test_eof130;
case 130:
	switch( (*p) ) {
		case 47: goto st130;
		case 67: goto st131;
		case 78: goto st132;
	}
	goto st129;
st131:
	if ( ++p == pe )
		goto _test_eof131;
case 131:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 101: goto st145;
	}
	goto st129;
st132:
	if ( ++p == pe )
		goto _test_eof132;
case 132:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 111: goto st133;
	}
	goto st129;
st133:
	if ( ++p == pe )
		goto _test_eof133;
case 133:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 116: goto st134;
	}
	goto st129;
st134:
	if ( ++p == pe )
		goto _test_eof134;
case 134:
	switch( (*p) ) {
		case 32: goto st135;
		case 47: goto st130;
		case 78: goto st132;
	}
	goto st129;
st135:
	if ( ++p == pe )
		goto _test_eof135;
case 135:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 105: goto st136;
	}
	goto st129;
st136:
	if ( ++p == pe )
		goto _test_eof136;
case 136:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 110: goto st137;
	}
	goto st129;
st137:
	if ( ++p == pe )
		goto _test_eof137;
case 137:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 115: goto st138;
	}
	goto st129;
st138:
	if ( ++p == pe )
		goto _test_eof138;
case 138:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 116: goto st139;
	}
	goto st129;
st139:
	if ( ++p == pe )
		goto _test_eof139;
case 139:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 97: goto st140;
	}
	goto st129;
st140:
	if ( ++p == pe )
		goto _test_eof140;
case 140:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 108: goto st141;
	}
	goto st129;
st141:
	if ( ++p == pe )
		goto _test_eof141;
case 141:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 108: goto st142;
	}
	goto st129;
st142:
	if ( ++p == pe )
		goto _test_eof142;
case 142:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 101: goto st143;
	}
	goto st129;
st143:
	if ( ++p == pe )
		goto _test_eof143;
case 143:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 100: goto st144;
	}
	goto st129;
st144:
	if ( ++p == pe )
		goto _test_eof144;
case 144:
	switch( (*p) ) {
		case 10: goto tr29;
		case 47: goto st130;
		case 78: goto st132;
	}
	goto st129;
st145:
	if ( ++p == pe )
		goto _test_eof145;
case 145:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 108: goto st146;
	}
	goto st129;
st146:
	if ( ++p == pe )
		goto _test_eof146;
case 146:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 108: goto st147;
	}
	goto st129;
st147:
	if ( ++p == pe )
		goto _test_eof147;
case 147:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 97: goto st148;
	}
	goto st129;
st148:
	if ( ++p == pe )
		goto _test_eof148;
case 148:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 114: goto st149;
	}
	goto st129;
st149:
	if ( ++p == pe )
		goto _test_eof149;
case 149:
	switch( (*p) ) {
		case 47: goto st150;
		case 78: goto st132;
	}
	goto st129;
st150:
	if ( ++p == pe )
		goto _test_eof150;
case 150:
	switch( (*p) ) {
		case 45: goto st151;
		case 47: goto st130;
		case 67: goto st228;
		case 78: goto st225;
		case 95: goto st151;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st151;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st151;
	} else
		goto st151;
	goto st129;
st151:
	if ( ++p == pe )
		goto _test_eof151;
case 151:
	switch( (*p) ) {
		case 45: goto st151;
		case 47: goto st152;
		case 78: goto st225;
		case 95: goto st151;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st151;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st151;
	} else
		goto st151;
	goto st129;
st152:
	if ( ++p == pe )
		goto _test_eof152;
case 152:
	switch( (*p) ) {
		case 47: goto st130;
		case 67: goto tr168;
		case 78: goto tr169;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto tr167;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr167;
	} else
		goto tr167;
	goto st129;
tr167:
#line 145 "libbuzzy/distro/homebrew.c.rl"
	{ start = p; }
	goto st153;
st153:
	if ( ++p == pe )
		goto _test_eof153;
case 153:
#line 902 "libbuzzy/distro/homebrew.c"
	switch( (*p) ) {
		case 32: goto tr170;
		case 47: goto st130;
		case 78: goto st215;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st153;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st153;
	} else
		goto st153;
	goto st129;
tr170:
#line 145 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	goto st154;
st154:
	if ( ++p == pe )
		goto _test_eof154;
case 154:
#line 925 "libbuzzy/distro/homebrew.c"
	switch( (*p) ) {
		case 40: goto st155;
		case 47: goto st130;
		case 78: goto st132;
	}
	goto st129;
st155:
	if ( ++p == pe )
		goto _test_eof155;
case 155:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st156;
	goto st129;
st156:
	if ( ++p == pe )
		goto _test_eof156;
case 156:
	switch( (*p) ) {
		case 32: goto st157;
		case 47: goto st130;
		case 78: goto st132;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st156;
	goto st129;
st157:
	if ( ++p == pe )
		goto _test_eof157;
case 157:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 102: goto st158;
	}
	goto st129;
st158:
	if ( ++p == pe )
		goto _test_eof158;
case 158:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 105: goto st159;
	}
	goto st129;
st159:
	if ( ++p == pe )
		goto _test_eof159;
case 159:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 108: goto st160;
	}
	goto st129;
st160:
	if ( ++p == pe )
		goto _test_eof160;
case 160:
	switch( (*p) ) {
		case 47: goto st130;
		case 78: goto st132;
		case 101: goto st161;
	}
	goto st129;
tr208:
#line 145 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	goto st161;
st161:
	if ( ++p == pe )
		goto _test_eof161;
case 161:
#line 1003 "libbuzzy/distro/homebrew.c"
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
	}
	goto st161;
st162:
	if ( ++p == pe )
		goto _test_eof162;
case 162:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 67: goto st163;
		case 78: goto st164;
	}
	goto st161;
st163:
	if ( ++p == pe )
		goto _test_eof163;
case 163:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 101: goto st177;
	}
	goto st161;
st164:
	if ( ++p == pe )
		goto _test_eof164;
case 164:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 111: goto st165;
	}
	goto st161;
st165:
	if ( ++p == pe )
		goto _test_eof165;
case 165:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 116: goto st166;
	}
	goto st161;
st166:
	if ( ++p == pe )
		goto _test_eof166;
case 166:
	switch( (*p) ) {
		case 10: goto tr52;
		case 32: goto st167;
		case 47: goto st162;
		case 78: goto st164;
	}
	goto st161;
tr213:
#line 145 "libbuzzy/distro/homebrew.c.rl"
	{ end = p; }
	goto st167;
st167:
	if ( ++p == pe )
		goto _test_eof167;
case 167:
#line 1073 "libbuzzy/distro/homebrew.c"
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 105: goto st168;
	}
	goto st161;
st168:
	if ( ++p == pe )
		goto _test_eof168;
case 168:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 110: goto st169;
	}
	goto st161;
st169:
	if ( ++p == pe )
		goto _test_eof169;
case 169:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 115: goto st170;
	}
	goto st161;
st170:
	if ( ++p == pe )
		goto _test_eof170;
case 170:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 116: goto st171;
	}
	goto st161;
st171:
	if ( ++p == pe )
		goto _test_eof171;
case 171:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 97: goto st172;
	}
	goto st161;
st172:
	if ( ++p == pe )
		goto _test_eof172;
case 172:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 108: goto st173;
	}
	goto st161;
st173:
	if ( ++p == pe )
		goto _test_eof173;
case 173:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 108: goto st174;
	}
	goto st161;
st174:
	if ( ++p == pe )
		goto _test_eof174;
case 174:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 101: goto st175;
	}
	goto st161;
st175:
	if ( ++p == pe )
		goto _test_eof175;
case 175:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 100: goto st176;
	}
	goto st161;
st176:
	if ( ++p == pe )
		goto _test_eof176;
case 176:
	switch( (*p) ) {
		case 10: goto tr69;
		case 47: goto st162;
		case 78: goto st164;
	}
	goto st161;
st177:
	if ( ++p == pe )
		goto _test_eof177;
case 177:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 108: goto st178;
	}
	goto st161;
st178:
	if ( ++p == pe )
		goto _test_eof178;
case 178:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 108: goto st179;
	}
	goto st161;
st179:
	if ( ++p == pe )
		goto _test_eof179;
case 179:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 97: goto st180;
	}
	goto st161;
st180:
	if ( ++p == pe )
		goto _test_eof180;
case 180:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st162;
		case 78: goto st164;
		case 114: goto st181;
	}
	goto st161;
st181:
	if ( ++p == pe )
		goto _test_eof181;
case 181:
	switch( (*p) ) {
		case 10: goto tr52;
		case 47: goto st182;
		case 78: goto st164;
	}
	goto st161;
st182:
	if ( ++p == pe )
		goto _test_eof182;
case 182:
	switch( (*p) ) {
		case 10: goto tr52;
		case 45: goto st183;
		case 47: goto st162;
		case 67: goto st198;
		case 78: goto st195;
		case 95: goto st183;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st183;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st183;
	} else
		goto st183;
	goto st161;
st183:
	if ( ++p == pe )
		goto _test_eof183;
case 183:
	switch( (*p) ) {
		case 10: goto tr52;
		case 45: goto st183;
		case 47: goto st184;
		case 78: goto st195;
		case 95: goto st183;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st183;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st183;
	} else
		goto st183;
	goto st161;
st184:
	if ( ++p == pe )
		goto _test_eof184;
case 184:
